--- a/pages/home.html
+++ b/pages/home.html
@@ -7,14 +7,24 @@
 
   <div class="carousel-inner">
     <div class="carousel-item active">
+      
+      <!-- MOBILE IMAGE -->
+      <div class="d-block d-sm-none">
+        <img 
+          src="Assets/home-mobile.png" 
+          class="w-100" 
+          alt="Desi Cow Mobile Image"
+          style="height: 100vh; object-fit: cover; object-position: center;">
+      </div>
 
-      <!-- Desktop Image -->
-      <img src="../Assets/home1.png" class="d-none d-md-block w-100 vh-100" alt="Desi Cow Image"
-        style="height: 65vh; object-fit: cover; object-position: center;">
-
-      <!-- Mobile Image -->
-      <img src="../Assets/home-mobile.png" class="d-block d-md-none w-100 vh-100" alt="Desi Cow Image Mobile"
-        style="height: 65vh; object-fit: cover; object-position: center;">
+      <!-- DESKTOP IMAGE -->
+      <div class="d-none d-sm-block">
+        <img 
+          src="Assets/home1.png" 
+          class="w-100" 
+          alt="Desi Cow Desktop Image"
+          style="height: 100vh; object-fit: cover; object-position: center;">
+      </div>
 
       <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 p-3 rounded">
         <h5 class="text-white">सर्वकामदुधु देवि देवि सर्वतीर्थस्वरूपिणि। पावनी सुरभि श्रेष्ठे नमस्तुभ्यं नमः पुनः।।</h5>
@@ -22,16 +32,6 @@
       </div>
     </div>
   </div>
-<!-- 
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button> -->
 </div>
 
 
